# luke-doku

./: LICENSE
.agents/: AGENTS.md
crate/: .gitignore  Cargo.toml
crate/benches/: min-orbit.rs  puzzles.rs
crate/src/: core.rs  date.rs  deduce.rs  evaluate.rs  gen.rs  lib.rs  permute.rs  random.rs  solve.rs  sym.rs  time.rs
crate/src/core/: asgmt.rs  bits.rs  grid.rs  id_types.rs  loc.rs  masks.rs  num.rs  set.rs  units.rs
crate/src/deduce/: internals.rs
crate/src/evaluate/: internals.rs
crate/src/solve/: ledger.rs  masks.rs
docs/: nested_disproofs_design.md  review_page_disproofs_design.md
www/: .prettierrc  .prettierrc.yaml  eslint.config.cjs  index.html  jest.config.ts  jest.setup.worker.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  web-test-runner.config.js  webpack.config.cjs
www/src/: bootstrap-worker.js  bootstrap.js  fonts.scss  index.html  index.ts  vite-plugin-eslint.d.ts  wasm.ts
www/src/app/: clock-input.ts  color-cube.ts  colors.ts  enter-puzzle-page.ts  events.ts  game-clock.ts  game-view.ts  gen-puzzle.ts  icon-button.ts  luke-doku.ts  mat-icon.ts  nav.test.ts  nav.ts  num-input.ts  pause-pattern.ts  prefs.ts  puzzle-rating.ts  puzzles-page.ts  replay-input.ts  replay-view.ts  review-page.ts  review-utils.ts  solve-page.ts  styles.ts  sudoku-input.ts  sudoku-view.ts  sym-match.ts  trail-colors.ts  types.ts  utils.ts
www/src/facts/: Band.ts  BandLoc.ts  Blk.ts  BlkLine.ts  Col.ts  DeduceResult.ts  ErroneousAssignmentProductivity.ts  Fact.ts  Loc.ts  LocSet.ts  Num.ts  NumSet.ts  Row.ts  SearchDisproofsResult.ts  (+8 more)
(+32 files in other folders)
