[package]
name = "luke-doku"
version = "1.0.0"
edition = "2021"
description = "Unlimited Sudoku on any device."
repository = "https://github.com/leadpipe/luke-doku/"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.77"
num-derive = "0.4"
num-traits = "0.2.19"
once_cell = "1.20.3"
paste = "1.0.15"
rand = {version = "0.9.0", default-features = false, features = ["std"]}
rand_distr = "0.5.0"
rand_pcg = "0.9.0"
rand_seeder = "0.4.0"
seq-macro = "0.3"
serde = {version = "1.0.217", features = ["derive"]}
serde-wasm-bindgen = "0.6"
static_assertions = "1.1"
wasm-bindgen = "0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std", "wasmbind"]
#features = ["serde", "std", "wasmbind"]

[dev-dependencies]
criterion = "0.5"
wasm-bindgen-test = "0.3.50"

[profile.release]
lto = true  # link-time opt
opt-level = "s"  # small code size.
# debug = true

[profile.bench]
debug = true

[[bench]]
name = "min-orbit"
harness = false

[[bench]]
name = "puzzles"
harness = false
